# jupyterlab-urdf

./: .gitignore  .prettierignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  environment.yml  install.json  jupyter_lite_config.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json  webpack.config-jlab.js  webpack.config.js
.github/workflows/: build.yml  check-release.yml  prep-release.yml  publish-release.yml  publish-self-release.yml  update-integration-tests.yml
binder/: environment.yml  postBuild
docs/: README.md  conf.py  dev_contribute.rst  dev_docs.rst  dev_install.rst  examples.md  gen_getting_started.rst  index.rst  installation.md  jupyter-lite.json  jupyterlite_config.json  notebook.ipynb  requirements.txt  robot.urdf  urdf_editor.md  urdf_viewer.md  use_editor.rst  use_examples.rst  use_viewer.rst
docs/source/: index.rst
examples/: T12_flipped.urdf  basic.urdf  burger.urdf  ned2.urdf  niryo.urdf  niryo_doppelganger.urdf  niryo_ned2.urdf.xacro  panda.urdf  panda_arm.urdf.xacro  spot.urdf
examples/Car/: Car.mtl  model.urdf
examples/franka_panda_description/: README.md  package.xml
examples/franka_panda_description/meshes/collision/: link0.stl
examples/franka_panda_description/meshes/visual/: finger.dae  hand.dae  link0.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae
examples/franka_panda_description/robots/: hand.xacro  panda.gazebo.xacro  panda.transmission.xacro  panda_arm.urdf  panda_arm.xacro  panda_arm_hand.urdf.xacro
examples/nao_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
examples/nao_description/config/: urdf.rviz
examples/nao_description/launch/: display.launch  robot_state_publisher.launch  upload_nao.launch
examples/nao_description/scripts/: test_cam_transform.py
examples/nao_description/src/: base_footprint.cpp
examples/nao_description/urdf/: nao_robot_v3.urdf.xacro  nao_robot_v3_structure.urdf.xacro  nao_robot_v4.urdf.xacro  nao_robot_v4_structure.urdf.xacro  visuals.xacro
examples/nao_description/urdf/naoV32_generated_urdf/: nao.urdf  naoTransmission.xacro  nao_arms.xacro  nao_fingers.xacro  nao_head.xacro  nao_legs.xacro  nao_robot.xacro  nao_sensors.xacro  nao_torso.xacro  nao_visual_collisions.xacro
examples/nao_description/urdf/naoV33_generated_urdf/: nao.urdf  nao_arms.xacro  nao_fingers.xacro  nao_head.xacro  nao_legs.xacro  nao_robot.xacro  nao_sensors.xacro  nao_torso.xacro
examples/nao_description/urdf/naoV40_generated_urdf/: naoGazebo.xacro  nao_arms.xacro  nao_fingers.xacro  nao_head.xacro  nao_legs.xacro  nao_robot.xacro  nao_sensors.xacro  nao_visual_collisions.xacro
examples/nao_description/urdf/naoV50_generated_urdf/: nao.urdf  naoGazebo.xacro  nao_arms.xacro  nao_fingers.xacro  nao_head.xacro  nao_legs.xacro  nao_robot.xacro  nao_sensors.xacro  nao_torso.xacro  nao_visual_collisions.xacro
examples/ned_description/: CMakeLists.txt
examples/ned_description/meshes/led_ring/: led.dae
examples/ned_description/meshes/ned/collada/: hand_link.dae  wrist_link.dae
examples/ned_description/meshes/ned/stl/: arm_link.stl  base_link.stl  elbow_link.stl
examples/ned_description/meshes/ned2/collada/: hand_link.dae
examples/ned_description/meshes/ned2/stl/: arm_link.stl  wrist_link.stl
examples/ned_description/urdf/ned/: niryo_ned_gazebo.urdf.xacro  niryo_ned_param.urdf.xacro
examples/ned_description/urdf/ned2/: niryo_ned2_gripper1_n_camera.urdf.xacro  niryo_ned2_param.urdf.xacro
examples/ned_description/urdf/one/: niryo_one_camera.urdf.xacro  niryo_one_gazebo.urdf.xacro  niryo_one_gripper1_n_camera.urdf.xacro
examples/racecar/: racecar.urdf
examples/spot_description/: CMakeLists.txt  package.xml
examples/spot_description/meshes/: base.stl  fr.hip.stl  hr.hip.stl  hr.lleg.stl
examples/src/ned_description/: package.xml
examples/src/ned_description/meshes/ned/stl/: forearm_link.stl  hand_link.stl  shoulder_link.stl  wrist_link.stl
examples/src/ned_description/meshes/ned2/collada/: arm_link.dae  elbow_link.dae  forearm_link.dae  shoulder_link.dae  wrist_link.dae
examples/src/ned_description/meshes/ned2/stl/: base_link.stl  elbow_link.stl  forearm_link.stl  hand_link.stl  shoulder_link.stl
examples/src/ned_description/urdf/ned/: niryo_ned.transmission.xacro  niryo_ned.urdf.xacro  niryo_ned_camera.urdf.xacro  niryo_ned_gripper1_n_camera.urdf.xacro  without_mesh_niryo_ned.urdf.xacro
examples/src/ned_description/urdf/ned2/: niryo_ned2.transmission.xacro  niryo_ned2.urdf.xacro  niryo_ned2_camera.urdf.xacro  niryo_ned2_gazebo.urdf.xacro  without_mesh_niryo_ned2.urdf.xacro
examples/src/ned_description/urdf/one/: niryo_one.transmission.xacro  niryo_one.urdf.xacro  niryo_one_param.urdf.xacro  without_mesh_niryo_one.urdf.xacro
examples/src/spot_description/meshes/: fl.uleg.stl
examples/src/spot_links/: CMakeLists.txt  base.dae  fl.hip.stl  fr.uleg.stl  hl.hip.stl  package.xml
examples/t12_description/: CMakeLists.txt  package.xml
jupyterlab_urdf/: __init__.py  _version.py
src/: controls.ts  factory.ts  icons.ts  index.ts  layout.ts  model.ts  renderer.ts  robot.ts  robot.urdf  svg.d.ts  types.ts  urdf-editor.ts  urdf.d.ts  widget.ts  xacro.ts
src/__tests__/: jupyterlab_urdf.spec.ts
src/editor/: editor.ts  linkSelector.ts  urdf-editor.ts
src/links/: axisIndicator.ts  linkManager.ts
src/scene/: sceneManager.ts
style/: base.css
ui-tests/: README.md  package.json
ui-tests/tests/: jupyterlab_urdf.spec.ts
