[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.4"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyterlab_urdf/labextension/static/style.js"]
ensured-targets = ["jupyterlab_urdf/labextension/static/style.js", "jupyterlab_urdf/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["jupyterlab_urdf/labextension/**", "yarn.lock", ".*", "package-lock.json"]
