[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.4"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyterlab_urdf/labextension/static/style.js"]
ensured-targets = ["jupyterlab_urdf/labextension/static/style.js", "jupyterlab_urdf/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["jupyterlab_urdf/labextension/**", "yarn.lock", ".*", "package-lock.json"]

[project]
name = "jupyterlab-urdf"
version = "0.1.2"
description = "A URDF viewer and editor extension for JupyterLab"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Isabel Paredes", email = "isabel.paredes@quantstack.net" },
]
keywords = ["Jupyter", "JupyterLab", "JupyterLab3"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
docs = [
    "jupyterlite-sphinx",
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme"
]
